gitea/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-strip-prefix
  namespace: gitea

spec:
  stripPrefix:
    prefixes:
      - /gitea
