gitea/k8s/traefik-job-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: trigger-job
  namespace: gitea
spec:
  plugin:
    shell:
      command:
        - "kubectl"
        - "apply"
        - "-f"
        - "/k8s/gitea-delete-repos-job.yaml"
