gitea/k8s/traefik_ingress_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`localhost`) && PathPrefix(`/gitea`)
    #middlewares:
    #- name: gitea-strip-prefix
    #  namespace: gitea
    kind: Rule
    priority: 10
    services:
    - kind: Service
      name: gitea-http
      namespace: gitea
      port: 3000
  tls:
    certResolver: default 
    options:
      name: tlsoption
      namespace: gitea
